--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,4 @@
-<style>body {
+body {
     font-family: "Satoshi", sans-serif;
     margin: 0;
     padding: 0;
@@ -58,5 +58,3 @@ a {
     text-align: center;
     line-height: 1px;
 }
-
-</style>
