--- a/src/global.css
+++ b/src/global.css
@@ -1,60 +1,60 @@
 body {
-    font-family: "Satoshi", sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: 'Satoshi', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .nav {
-    display: flex;
-    flex-direction: row;
-    column-gap: 20px;
-    font-family: "Satoshi", sans-serif;
-    font-weight: 900;
-    justify-content: center;
-    background-color: black;
+  display: flex;
+  flex-direction: row;
+  column-gap: 20px;
+  font-family: 'Satoshi', sans-serif;
+  font-weight: 900;
+  justify-content: center;
+  background-color: black;
 }
 
 .titles {
-    color: white;
-    transition: color 0.5s ease-in-out;
+  color: white;
+  transition: color 0.5s ease-in-out;
 }
 
 .titles:hover {
-    color: orange;
+  color: orange;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .getintouch {
-    font-family: "Satoshi", sans-serif;
-    font-weight: 1000;
+  font-family: 'Satoshi', sans-serif;
+  font-weight: 1000;
 }
 
 .copyrights {
-    font-family: "Satoshi", sans-serif;
-    font-weight: 400;
-    font-style: italic;
+  font-family: 'Satoshi', sans-serif;
+  font-weight: 400;
+  font-style: italic;
 }
 
 .email {
-    font-family: "Satoshi", sans-serif;
-    font-weight: 900;
-    margin: 30px;
-    color: black;
-    font-size: 1em;
+  font-family: 'Satoshi', sans-serif;
+  font-weight: 900;
+  margin: 30px;
+  color: black;
+  font-size: 1em;
 }
 
 .P5 {
-    background-color: #e7e7e7;
-    height: 15vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    flex-direction: column;
-    text-align: center;
-    line-height: 1px;
+  background-color: #e7e7e7;
+  height: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  flex-direction: column;
+  text-align: center;
+  line-height: 1px;
 }
